--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,11 +2,11 @@
 	width: -webkit-fill-available;
 	background-color: rgb(163, 163, 163);
 	color: rgb(44, 44, 44);
-	margin: 0.75rem 0;
+	margin: 0.5rem 0;
 	border-radius: 8px;
 	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
+	padding: 0.75rem 1.5rem;
+	font-size: 1rem;
 	font-weight: 500;
 	font-family: inherit;
 	cursor: pointer;
